src/parser/y.output
Terminals unused in grammar

   ALPHANUM
   TAB
   HASHTAG


Grammar

    0 $accept: grid $end

    1 grid: line NEWLINE grid
    2     | line

    3 line: valid_char line
    4     | valid_char

    5 valid_char: UNDERSCORE
    6           | ZERO
    7           | ONE
    8           | TWO
    9           | THREE


Terminals, with rules where they appear

$end (0) 0
error (256)
ALPHANUM (258)
NEWLINE (259) 1
TAB (260)
HASHTAG (261)
UNDERSCORE (262) 5
ZERO (263) 6
ONE (264) 7
TWO (265) 8
THREE (266) 9


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
grid (13)
    on left: 1 2, on right: 0 1
line (14)
    on left: 3 4, on right: 1 2 3
valid_char (15)
    on left: 5 6 7 8 9, on right: 3 4


State 0

    0 $accept: . grid $end

    UNDERSCORE  shift, and go to state 1
    ZERO        shift, and go to state 2
    ONE         shift, and go to state 3
    TWO         shift, and go to state 4
    THREE       shift, and go to state 5

    grid        go to state 6
    line        go to state 7
    valid_char  go to state 8


State 1

    5 valid_char: UNDERSCORE .

    $default  reduce using rule 5 (valid_char)


State 2

    6 valid_char: ZERO .

    $default  reduce using rule 6 (valid_char)


State 3

    7 valid_char: ONE .

    $default  reduce using rule 7 (valid_char)


State 4

    8 valid_char: TWO .

    $default  reduce using rule 8 (valid_char)


State 5

    9 valid_char: THREE .

    $default  reduce using rule 9 (valid_char)


State 6

    0 $accept: grid . $end

    $end  shift, and go to state 9


State 7

    1 grid: line . NEWLINE grid
    2     | line .

    NEWLINE  shift, and go to state 10

    $default  reduce using rule 2 (grid)


State 8

    3 line: valid_char . line
    4     | valid_char .

    UNDERSCORE  shift, and go to state 1
    ZERO        shift, and go to state 2
    ONE         shift, and go to state 3
    TWO         shift, and go to state 4
    THREE       shift, and go to state 5

    $default  reduce using rule 4 (line)

    line        go to state 11
    valid_char  go to state 8


State 9

    0 $accept: grid $end .

    $default  accept


State 10

    1 grid: line NEWLINE . grid

    UNDERSCORE  shift, and go to state 1
    ZERO        shift, and go to state 2
    ONE         shift, and go to state 3
    TWO         shift, and go to state 4
    THREE       shift, and go to state 5

    grid        go to state 12
    line        go to state 7
    valid_char  go to state 8


State 11

    3 line: valid_char line .

    $default  reduce using rule 3 (line)


State 12

    1 grid: line NEWLINE grid .

    $default  reduce using rule 1 (grid)
